--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,23 @@ __pycache__/
 *$py.class
 *.so
 .Python
-*.log
-*.egg-info/
-dist/
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Virtual Environment
+# Virtual environments
 venv/
 env/
 ENV/
@@ -22,14 +33,35 @@ ENV/
 *.swo
 *~
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Logs
+*.log
+logs/
+parser.log
+
+# Uploads
+uploads/
+*.pdf
+!backend/samples/*.pdf
+
 # OS
 .DS_Store
 Thumbs.db
 
-# Project specific
-parser.log
-samples/*.pdf
-credit_card_parser-main/
+# Flask
+instance/
+.webassets-cache
 
-# Vercel
-.vercel
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
